# django-powercrud

./: .dockerignore  .gitignore  .gitlab-ci.yml  .trivyignore.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG.md.j2  DOCS_filter_pagination.md  DOCS_new_features.md  README.md  bump_poetry.sh  context7.json  coverage2.xml  cz.yaml  doctor-cornelius_django-powercrud_2025-10-27_13-02_58e92937-fe0c-43ee-a579-aab9bf47eacd.txt  manage.py  mkdocs.yml  mkdocs_build.yml  new_features.md  new_release.sh  newblog.sh  opinionated.md  package-lock.json  package.json  package.json.webpack  postcss.config.js.webpack  pyproject.toml  pytest.ini  renovate.json  rs  ruff.sh  runproj  runtests  tailwind.config.js  vite.config.mjs  webpack.config.js  wp
.github/workflows/: deploy_docs.yml  pr_tests.yml  publish.yml  run_tests.yml  security.yml
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tasks.md  tech.md
AGENTS/: AGENTS.md  AGENTS_planning.md  AGENTS_pr_workflow.md
config/: asgi.py  settings.py  wsgi.py
config/static/css/: main.css
django_nominopolitan/: settings.py  urls.py  views.py
django_nominopolitan/static/css/: main.css  output.css
django_nominopolitan/static/js/: htmx-init.js  main.js
django_nominopolitan/templates/django_nominopolitan/: base.html  index.html
docker/: .env.sample  docker-compose.yml  dockerfile_django  postgresql.conf
docker/dev/: dev.secret.sample
docs/_plans/: .gitignore  .nav.yml  AGENTS.md  index.md
docs/_plans/abstract_surface/: abstract_surface-config-audit.md  abstract_surface-notes.md  abstract_surface-plan.md  powerfield_spec.md
docs/_plans/dependency_security/: dependency_security-notes.md  dependency_security-plan.md
docs/_plans/js_cleanup/: phase5-handover.md  phase5-plan.md  phase6-handover.md  phase6-plan.md  phase7-handover.md  powercrud-js-behaviour-inventory.md  powercrud-js-contract-map.md  powercrud-js-listeners-and-dependencies.md  powercrud-js-test-coverage-map.md
docs/_plans/lazy_action_state/: lazy_action_state-notes.md  lazy_action_state-plan.md
docs/_plans/list_options/: .nav.yml  list_options-notes.md  list_options-plan.md
docs/_plans/package_release_gates/: package_release_gates-notes.md  package_release_gates-plan.md
docs/_plans/permission_aware_affordances/: permission_aware_affordances-ddms-summary.md  permission_aware_affordances-notes.md  permission_aware_affordances-plan.md
docs/_plans/power_actions/: power_actions-notes.md  power_actions-plan.md
docs/_plans/queryset_fields/: queryset_fields-notes.md  queryset_fields-plan.md
docs/_plans/single-delete-ux/: .nav.yml  single-delete-ux-notes.md  single-delete-ux-plan.md
docs/_plans/template_packs/: AGENTS.md  template_packs-master-notes.md  template_packs-master-plan.md  template_packs-notes.md  template_packs-plan.md
docs/mkdocs/: .nav.yml  .pages  getting_started.md  index.md
docs/mkdocs/_plans/: .nav.yml  AGENTS.md
docs/mkdocs/blog/: .pages
docs/mkdocs/configuration/: .pages  async_processing.md  bulk_operations.md  core_config.md  filtering.md  form_handling.md  htmx_modals.md  pagination.md  styling.md
docs/mkdocs/deprecated/: .pages
docs/mkdocs/guides/: .nav.yml  .pages  01_setup_core_crud.md  02_bulk_edit_sync.md  03_async_manager.md  04_bulk_edit_async.md  05_async_dashboard.md  06_styling_tailwind.md  07_customisation_tips.md  async_dashboard.md  forms.md  (+13 more)
nominopolitan/: admin.py  mixins.py  models.py  tasks.py
nominopolitan/assets/: manifest.json
nominopolitan/mixins/: async_mixin.py  bulk_mixin.py  core_mixin.py  form_mixin.py  htmx_mixin.py  url_mixin.py
nominopolitan/templatetags/: nominopolitan.py
powercrud/assets/: manifest.json
requirements/: constraints-django42.txt  constraints-django52.txt  constraints-django60.txt
sample/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
sample/migrations/: 0001_initial.py  0002_author_an_integer_with_long_heading_text.py  0002_book_uneditable_field.py  0003_book_isbn_empty.py  0003_genre_book_genres.py  0004_book_bestseller.py  0005_genre_numeric_string_alter_book_bestseller.py  0006_book_unique_title_author.py  0007_profile.py  0008_remove_book_isbn_empty.py  0009_alter_book_isbn.py
scripts/: verify_installed_template_pack_artifacts.py
src/: vite.config.mjs
src/config/: asgi.py  settings.py  settings_bootstrap.py  settings_focused_overrides.py  urls.py  wsgi.py
src/powercrud/: actions.py  admin.py  apps.py  async_context.py  async_dashboard.py  async_hooks.py  async_manager.py  bulk_persistence.py  cell_tooltips.py  conf.py  labels.py  modal_presentation.py  models.py  powerfields.py  query_params.py  row_actions.py  tasks.py  template_pack_testing.py  template_pack_validation.py  template_packs.py  urls.py  validators.py
src/sample/: admin.py  async_manager.py  backends.py  context_processors.py  filters.py  forms.py  middleware.py  models.py  services.py  tests.py  urls.py  views.py
src/tests/: conftest.py  settings.py  settings_bootstrap.py  settings_external_template_pack.py  settings_focused_overrides.py  settings_minimal.py  template_pack_fixtures.py  test_async_context.py  test_async_hooks.py  test_async_mixin_extended.py  test_bootstrap_sample_presentation.py  test_bootstrap_template_pack.py  test_bulk_operation_mixin.py  test_bulk_roles.py  test_bulk_select_all_matching.py  test_bulk_view_mixin.py  test_conf_logging_validators.py  test_core_phase1.py  test_delete_mixin.py  test_favourites_contrib.py  test_filtering_mixin_extended.py  test_focused_book_overrides.py  test_form_filter_template_mixins.py  test_form_mixin_extended.py  test_frontend_asset_packaging.py  test_htmx_bulk_mixins.py  test_inline_editing_mixin.py  test_list_options.py  test_management_commands.py  test_minimal_settings_no_async.py  test_poweractions.py  test_powercrud_tasks_and_utils.py  test_powerfields.py  test_release_policy.py  test_same_adapter_template_pack.py  test_sample_presentation_catalogue.py  test_sample_presentation_settings.py  test_sample_runtime_metadata.py  test_sample_view_filters.py  test_template_pack_behaviour_matrix.py  (+6 more)
(+637 files in other folders)
