[project]
name = "django-powercrud"
version = "0.3.6"
description = "Advanced CRUD for perfectionists with deadlines. An opinionated Neapolitan extension, with sprinkles."
readme = "README.md"
authors = [
    { name = "doctor-cornelius" }
]
requires-python = ">=3.12"
dependencies = [
    "django-template-partials>=24.4,<25.0",
    "pydantic>=2.12.3,<3.0",
    "django-htmx>=1.26.0,<2.0"
]

[project.optional-dependencies]
tests-core = [
    "pytest>=8.4.2,<9",
    "coverage>=7.11.0,<8",
    "pytest-cov>=5,<6",
    "pytest-mock>=3.15.1,<4",
    "validators>=0.35.0,<1",
    "faker>=37.12.0,<38",
    "django>=4.2.25,<6",
    "neapolitan>=24.8,<25",
    "django-crispy-forms>=2.4,<3",
    "crispy-bootstrap5>=2024.10,<2025",
    "crispy-tailwind>=1.0.3,<2",
    "crispy-daisyui>=0.8.0,<1",
    "django-vite>=3.1.0,<4",
    "django-q2>=1.8.0,<2",
    "psycopg-binary>=3.2.12,<4",
    "psycopg>=3.2.12,<4",
    "django-redis>=6.0.0,<7",
    "pytest-django>=4.11.1,<5"
]
tests-ui = [
    "pytest-playwright>=0.7.1,<1",
    "playwright>=1.55.0,<2"
]
dev = [
    "commitizen>=3.31.0,<4",
    "ipykernel>=6.31.0,<7"
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.22,<10",
    "mkdocs-mermaid2-plugin>=0.6.0,<1",
    "mkdocs-enumerate-headings-plugin>=0.6.2,<0.7",
    "mkdocs-awesome-pages-plugin>=2.10.1,<3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "powercrud/**",
    "README.md"
]

[tool.hatch.build.targets.wheel]
packages = ["powercrud"]

[tool.pytest.ini_options]
addopts = [
    "--cov=", # all apps
]

# Groups mirror optional extras so uv can install targeted stacks.
[dependency-groups]
tests-core = [
    "pytest>=8.2.1,<9",
    "coverage>=7,<8",
    "pytest-cov>=5,<6",
    "pytest-mock>=3.14.0,<4",
    "validators>=0.28.3,<1",
    "faker>=37.4.2,<38",
    "django>=4.2,<6",
    "neapolitan>=24.8,<25",
    "django-crispy-forms>=2.3,<3",
    "crispy-bootstrap5>=2024.10,<2025",
    "crispy-tailwind>=1.0.3,<2",
    "crispy-daisyui>=0.7.0,<1",
    "django-vite>=3.1.0,<4",
    "django-q2>=1.8.0,<2",
    "psycopg-binary>=3.2.1,<4",
    "psycopg>=3.2.1,<4",
    "django-redis>=6.0.0,<7",
    "pytest-django>=4.11.1,<5"
]
tests-ui = [
    "pytest-playwright>=0.7.1,<1",
    "playwright>=1.55.0,<2"
]
dev = [
    "commitizen>=3,<4",
    "ipykernel>=6,<7"
]
