[project]
name = "django-powercrud"
version = "0.4.14"
description = "Advanced CRUD for perfectionists with deadlines. An opinionated Neapolitan extension, with sprinkles."
readme = "README.md"
authors = [
    { name = "doctor-cornelius" }
]
requires-python = ">=3.12"
dependencies = [
    "django-template-partials>=25.3",
    "pydantic>=2.12.5,<3.0",
    "django-htmx>=1.27.0,<2.0",
]

[project.optional-dependencies]
tests-core = [
    "pytest>=8.4.2,<9",
    "coverage>=7.13.4,<8",
    "pytest-cov>=7.0.0,<8",
    "pytest-mock>=3.15.1,<4",
    "validators>=0.35.0,<1",
    "faker>=38.3.0,<39",
    "django>=4.2.25,<6",
    "neapolitan>=25.1,<26",
    "django-crispy-forms>=2.5,<3",
    "crispy-tailwind>=1.0.3,<2",
    "django-vite>=3.1.0,<4",
    "django-q2>=1.9.0,<2",
    "psycopg-binary>=3.3.3,<4",
    "psycopg>=3.3.3,<4",
    "django-redis>=6.0.0,<7",
    "pytest-django>=4.12.0,<5",
]
tests-ui = [
    "pytest-playwright>=0.7.2,<1",
    "playwright>=1.58.0,<2"
]
dev = [
    "commitizen>=4.13.8,<5",
    "ipykernel>=7.2.0,<8",
    "ruff>=0.15.2",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.3,<10",
    "mkdocs-mermaid2-plugin>=1.2.3,<2",
    "mkdocs-enumerate-headings-plugin>=0.6.2,<0.7",
    "mkdocs-awesome-nav>=3.3.0,<4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/powercrud/**",
    "README.md"
]

[tool.hatch.build.targets.wheel]
packages = ["src/powercrud"]

[tool.coverage.run]
source = ["powercrud"]

[tool.coverage.report]
include = [
    "*/src/powercrud/*"
]
# omit = [
#     "*/src/sample/*",
#     "*/src/tests/*",
#     "*/src/core"
# ]

# Groups mirror optional extras so uv can install targeted stacks.
[dependency-groups]
tests-core = [
    "pytest>=8.4.2,<9",
    "coverage>=7.13.4,<8",
    "pytest-cov>=7.0.0,<8",
    "pytest-mock>=3.15.1,<4",
    "validators>=0.35.0,<1",
    "faker>=38.3.0,<39",
    "django>=4.2.25,<6",
    "neapolitan>=25.1,<26",
    "django-crispy-forms>=2.5,<3",
    "crispy-tailwind>=1.0.3,<2",
    "django-vite>=3.1.0,<4",
    "django-q2>=1.9.0,<2",
    "psycopg-binary>=3.3.3,<4",
    "psycopg>=3.3.3,<4",
    "django-redis>=6.0.0,<7",
    "pytest-django>=4.12.0,<5"
]
tests-ui = [
    "pytest-playwright>=0.7.2,<1",
    "playwright>=1.58.0,<2"
]
dev = [
    "commitizen>=4.13.8,<5",
    "ipykernel>=7.2.0,<8",
    "ruff>=0.15.2",
]

[tool.ruff.lint.per-file-ignores]
# F401: ignore "imported but unused" for explicit package re-exports.
"src/**/__init__.py" = ["F401"]
